# mosaic

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
cli/: Cargo.toml  test_full_output.txt
cli/src/: auth.rs  cli.rs  config.rs  github.rs  installer.rs  lockfile.rs  logger.rs  main.rs  registry.rs  updater.rs  xml_handler.rs
registry/: .dockerignore  Cargo.toml  Dockerfile  check_errors.txt
registry/src/: lib.rs  main.rs  state.rs
registry/src/db/: 20260211_add_downloads.sql  mod.rs
registry/src/db/migrations/: 20260211_add_downloads.sql  20260211_add_revoked_tokens.sql
registry/src/handlers/: auth.rs  health.rs  mod.rs  package.rs
registry/src/middleware/: auth.rs  rate_limit.rs
registry/src/models/: package.rs  user.rs
registry/src/routes/: mod.rs
registry/src/utils/: auth.rs  license_cache.bin.zstd  mod.rs  storage.rs  validation.rs
website/: next.config.ts  package.json  pnpm-lock.yaml  theme.config.tsx
website/public/: install.ps1  install.sh  site.webmanifest
website/src/app/: _meta.ts  globals.css  layout.tsx  page.tsx
website/src/app/(main)/: layout.tsx  page.tsx
website/src/app/docs/: layout.tsx
website/src/app/docs/[...slug]/: page.tsx
website/src/app/docs/[[...mdxPath]]/: page.tsx
website/src/components/: footer.tsx  install-command.tsx  navbar.tsx
website/src/content/: _meta.json  _meta.ts  architecture.mdx  cli.mdx  getting-started.mdx  index.mdx  privacy.mdx  publishing.mdx  registry-api.mdx  self-hosting.mdx  terms.mdx
website/src/content/docs/: getting-started.mdx
website/src/lib/: mdx.ts  registry.ts
website/src/pages/docs/: getting-started.mdx  index.mdx
