[package]
name = "mosaic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
quick-xml = "0.39.0"
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
url = "2.5.8"
colored = "3.1.1"
indicatif = "0.17.11"
inquire = "0.9.3"
directories = "6.0.0"
zip = "7.4.0"
sha2 = "0.10.9"
serde_json = "1.0.149"
base64 = "0.22.1"
walkdir = "2.5.0"
comfy-table = "7.2.2"
console = "0.16.2"
ignore = "0.4.25"
keyring = { version = "3.6.3", default-features = false, features = ["windows-native", "apple-native", "linux-native"] }
bytes = "1.11.1"
