[package]
name = "registry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
argon2 = "0.5.3"
async-trait = "0.1.89"
aws-config = "1.8.13"
aws-sdk-s3 = "1.122.0"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
chrono = "0.4.43"
dotenvy = "0.15.7"
jsonwebtoken = "10.3.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
surrealdb = { version = "2.6.0", features = [
  "kv-mem",
  "protocol-http",
  "protocol-ws",
] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }


[dependencies.rustls]
version = "0.23"
default-features = false
features = ["ring"]
