[package]
name = "registry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
argon2 = "0.5.3"
async-trait = "0.1.89"
aws-config = { version = "1.8.13", features = ["rustls"] }
aws-sdk-s3 = { version = "1.122.0", features = ["rustls"] }
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
chrono = "0.4.43"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["use_pem", "rust_crypto"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
zip = "7.4.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }
tower_governor = "0.8.0"
governor = "0.10.4"
regex = "1.12.3"
